src/renderer/scss/MainRouteRenderer.scss
/* ... */
.node-type-r {
    fill: $c-router;
    background-color: $c-router;
}

.node-type-e {
    fill: $c-eth;
    background-color: $c-eth;
}

.node-type-p {
    fill: $c-pcix;
    background-color: $c-pcix;
}

.node-type {
    border-bottom: 2px solid transparent;

    &.detailed-view {
        border-bottom: 2px solid $bright-highlight;
    }
}

.main-route {
    // This is a CSS variable because the value is set dynamically in react.
    --bottom-dock-height: $initial-dock-height;

    display: grid;
    grid-template-columns: $sidebar-width $controls-panel-width minmax(auto, max-content) minmax($properties-panel-width, auto);
    grid-template-rows: $top-bar-height 1fr;
    grid-template-areas:
        "top-bar top-bar top-bar top-bar"
        "sidebar controls main properties";
    gap: 10px;
    padding: 10px;
    height: 100vh;
    width: 100vw;

    .header {
        grid-area: top-bar;
        margin: 0;
    }

    .sidebar { grid-area: sidebar; }
    .grid-sidebar { grid-area: controls; }
    .main-content {
        max-width: 50vw;
        grid-area: main;
        overflow: auto;
    }
    .properties-panel {
        min-width: $properties-panel-width;
        grid-area: properties;
    }

    .bottom-dock {
        grid-area: bottom-dock;
        display: none;
        max-height: $initial-dock-height;
        align-self: end;
    }

    &.dock-open {
        grid-template-rows: $top-bar-height 1fr var(--bottom-dock-height);
        grid-template-areas:
            "top-bar top-bar top-bar top-bar"
            "sidebar controls main properties"
            "bottom-dock bottom-dock bottom-dock bottom-dock"
        ;

        .bottom-dock { display: block; }
    }

    &.detailed-view-open {
        grid-template-rows: $top-bar-height 1fr var(--bottom-dock-height);
        grid-template-areas:
            "top-bar top-bar top-bar top-bar"
            "sidebar controls main properties"
            "bottom-dock bottom-dock bottom-dock properties"
        ;
    }
}

.outer-wrapper {
    display: flex;
    flex-direction: column;
    height: 100vh;
    width: 100vw;
    overflow: hidden;


    .dock {
        margin: 0 20px;
        width: calc(100% - 40px);
        height: 0px;
        overflow: hidden;
    }

    $dock-height: 420px;

    &.dock-open {
        .dock {
            height: $dock-height - 20px;
            bottom: 0;
        }

        .main-wrapper {
            height: calc(100vh - $dock-height);
            overflow: hidden;
        }

        .grid-container {
            height: calc(100vh - 10px - $dock-height);
        }

        .properties-panel {
            margin-block-end: 10px;
        }

        .properties-panel-nodes {
            max-height: calc(100vh - 70px - $dock-height);
        }

        .list-wrap {
            max-height: calc(100vh - 150px - $dock-height);
        }

        .properties-panel__content .list-wrap {
            max-height: calc(100vh - 120px - $dock-height);
        }

        .inner-sidebar {
            max-height: calc(100vh - 20px - $dock-height);
        }
    }

    &.detailed-view-open {
        .inner-sidebar {
            max-height: calc(100vh - 640px);
        }

        .grid-container {
            height: calc(100vh - 640px);
        }
    }
}

.main-wrapper {
    margin-top: 20px;
    display: flex;
    flex-direction: row;
    gap: 20px;
}

.main-container {
    display: flex;
    gap: 50px;
    width: calc(100% - 100px);
}

.sidebar {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.inner-sidebar {
    // max-height: calc(100vh - 100px);
    overflow-y: auto;
    scrollbar-gutter: stable;
    min-width: 220px;
    overflow-x: hidden;

    .inner-sidebar-wrap {
        display: flex;
        flex-direction: column;
        margin-inline: 10px 20px;

        .congestion-legend {
            width: calc(100% - 10px);
            height: 3px;
        }

        .bp4-slider {
            width: calc(100% - 10px);
        }
    }

    hr {
        border: none;
        width: 100%;
        border-top: 1px solid $hr;

    }

    .bp4-numeric-input {
        .bp4-input-group {
            max-width: 150px;
        }
    }
}
/* ... */

